--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,6 +30,8 @@
 
   "code-runner.executorMap": {
     "javascript": "node -r @babel/register"
-  }
+  },
+
+  "editor.semanticHighlighting.enabled": true
 
 }
