--- a/package.json
+++ b/package.json
@@ -59,8 +59,10 @@
     "express": "^4.17.1",
     "graphql": "^14.4.2",
     "html-pdf": "^2.2.0",
+    "mailparser": "^2.7.7",
     "mariadb": "^2.0.5",
     "nodemailer": "^6.2.1",
-    "sendmail": "^1.6.1"
+    "sendmail": "^1.6.1",
+    "smtp-server": "^3.5.0"
   }
 }
