--- a/package.json
+++ b/package.json
@@ -10,59 +10,54 @@
     "node_modules/**/*.js"
   ],
   "devDependencies": {
-    "@babel/core": "^7.3.4",
-    "@babel/plugin-proposal-class-properties": "^7.3.4",
-    "@babel/plugin-proposal-decorators": "^7.3.0",
+    "@babel/core": "^7.10.4",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/plugin-proposal-decorators": "^7.10.4",
     "@babel/plugin-proposal-export-namespace-from": "^7.2.0",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.2.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.3.4",
-    "@babel/plugin-proposal-optional-chaining": "^7.2.0",
-    "@babel/plugin-proposal-pipeline-operator": "^7.3.2",
-    "@babel/plugin-proposal-private-methods": "^7.3.4",
-    "@babel/preset-env": "^7.3.4",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/register": "^7.4.0",
-    "@kemsu/graphiql": "github:cnit-kemsu/graphiql",
+    "@babel/plugin-proposal-object-rest-spread": "^7.10.4",
+    "@babel/plugin-proposal-optional-chaining": "^7.10.4",
+    "@babel/plugin-proposal-pipeline-operator": "^7.10.4",
+    "@babel/plugin-proposal-private-methods": "^7.10.4",
+    "@babel/preset-env": "^7.10.4",
+    "@babel/preset-react": "^7.10.4",
+    "@babel/register": "^7.10.4",
+    "@kemsu/graphiql": "github:johncooper87/graphiql",
     "babel-eslint": "^11.0.0-beta.0",
-    "babel-loader": "^8.0.5",
-    "babel-plugin-module-resolver": "^3.2.0",
+    "babel-loader": "^8.1.0",
+    "babel-plugin-module-resolver": "^4.0.0",
     "css-loader": "^2.1.1",
-    "eslint": "^5.15.1",
-    "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-html": "^5.0.3",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-react": "^7.12.4",
-    "html-webpack-plugin": "^3.2.0",
-    "inspectpack": "^4.2.1",
-    "multer": "^1.4.1",
-    "nodemon": "^1.18.10",
-    "npm-run-all": "^4.1.5",
-    "react": "^16.8.5",
-    "react-dom": "^16.8.5",
+    "eslint": "^7.4.0",
+    "eslint-plugin-babel": "^5.3.1",
+    "eslint-plugin-html": "^6.0.2",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-react": "^7.20.3",
+    "html-webpack-plugin": "^4.3.0",
+    "inspectpack": "^4.5.2",
+    "multer": "^1.4.2",
+    "nodemon": "^2.0.4",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "style-loader": "^0.23.1",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.2.3",
-    "webpack-dev-server": "^3.2.1",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0",
     "webpack-node-externals": "^1.7.2"
   },
   "scripts": {
-    "start": "npm-run-all --parallel server dev-server",
-    "server": "node_modules/.bin/nodemon --watch src --exec \"node --inspect=9229 -r ./babel-register src/index.js\"",
-    "dev-server": "node_modules/.bin/nodemon --watch webpack.config.babel.js --exec webpack-dev-server",
-    "initdb": "node -r ./babel-register src/initdb.js",
+    "start": "nodemon --watch webpack.config.babel.js --watch babel.config.js --exec webpack-dev-server",
+    "server": "nodemon --watch babel.config.js --watch src --exec node --inspect=9229 -r ./babel-register src/index.js",
     "build": "webpack --config webpack.config.build.babel.js",
-    "prod-server": "node_modules/.bin/nodemon --watch dist --exec \"node --inspect=9229 -r ./dist/main.js\""
+    "prod-server": "nodemon --watch dist --exec \"node --inspect=9229 -r ./dist/main.js\"",
+    "initdb": "node -r ./babel-register initdb.js"
   },
   "dependencies": {
-    "@kemsu/graphql-server": "github:cnit-kemsu/graphql-server",
+    "@kemsu/graphql-server": "johncooper87/graphql-server",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "graphql": "^14.4.2",
     "html-pdf": "^2.2.0",
-    "mailparser": "^2.7.7",
     "mariadb": "^2.0.5",
-    "nodemailer": "^6.2.1",
-    "sendmail": "^1.6.1",
-    "smtp-server": "^3.5.0"
+    "sendmail": "^1.6.1"
   }
 }
